--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 header.startup {
   background-position: center;
-  background-image: url("header.jpg");
+  background-image: url("header.JPG");
   background-size: cover;
   height: 100%;
 }
